Accessibility & Font - Adjusted color contrast - Enabled local Roboto Black font - Fixed misused aria attributes

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -62,10 +62,10 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  /*src: local('Roboto Black'),
+  src: local('Roboto Black'),
     local('Roboto-Black'),
-    url('../fonts/Roboto-Black-webfont.eot');*/
-  src: /*url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),*/
+    url('../fonts/Roboto-Black-webfont.eot');
+  src: url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Roboto-Black-webfont.woff') format('woff'),
     url('../fonts/Roboto-Black-webfont.ttf') format('truetype');
 }
@@ -146,7 +146,7 @@ h4 {
 }
 
 a {
-  color: hsl(218, 100%, 55%);
+  color: hsl(218, 100%, 50%);
 }
 
 a:hover,
@@ -174,7 +174,7 @@ a:visited {
 }
 
 .navbar-mobile {
-  border-bottom: .5rem solid hsl(0, 91%, 50%);
+  border-bottom: .5rem solid hsl(0, 91%, 48%);
 }
 
 .navbar-brand {
@@ -199,7 +199,7 @@ a:visited {
 .nav-container {
   width: 100%;
   min-height: .5rem;
-  background-color: hsl(0, 91%, 50%);
+  background-color: hsl(0, 91%, 48%);
 }
 
 .navbar-desktop .navbar-nav {
@@ -438,7 +438,7 @@ a:visited {
 }
 
 .btn-primary {
-  background-color: hsl(122, 83%, 35%);
+  background-color: hsl(122, 83%, 29%);
   transition: none;
 }
 
@@ -480,7 +480,7 @@ a:visited {
 }
 
 .table .thead-dark th {
-  background-color: hsl(218, 75%, 55%);
+  background-color: hsl(218, 75%, 50%);
   border: 0;
 }
 
@@ -621,7 +621,7 @@ a:visited {
 
 .footer {
   padding: 2rem 0;
-  border-top: .5rem solid hsl(0, 91%, 50%);
+  border-top: .5rem solid hsl(0, 91%, 48%);
   color: white;
 }
 
@@ -642,7 +642,7 @@ a:visited {
 }
 
 .footer a {
-  color: hsl(218, 100%, 65%);
+  color: hsl(218, 100%, 75%);
 }
 
 .footer a:hover,
